--- a/public/assets/css/AdminLTE.css
+++ b/public/assets/css/AdminLTE.css
@@ -1267,14 +1267,14 @@ a:focus {
   appearance: none;
 }
 .form-group.has-success label {
-  color: #00a65a;
+  color: #605ca8;
 }
 .form-group.has-success .form-control {
-  border-color: #00a65a;
+  border-color: #605ca8;
   box-shadow: none;
 }
 .form-group.has-success .help-block {
-  color: #00a65a;
+  color: #605ca8;
 }
 .form-group.has-warning label {
   color: #f39c12;
@@ -1417,7 +1417,9 @@ a:focus {
 }
 .progress-bar-green,
 .progress-bar-success {
-  background-color: #00a65a;
+  background-color: #605ca8;
+  /* background-color: #605ca8; */
+
 }
 .progress-striped .progress-bar-green,
 .progress-striped .progress-bar-success {
@@ -1559,7 +1561,7 @@ a:focus {
   border-top-color: #f39c12;
 }
 .box.box-success {
-  border-top-color: #00a65a;
+  border-top-color: #605ca8;
 }
 .box.box-default {
   border-top-color: #d2d6de;
@@ -1656,12 +1658,12 @@ a:focus {
   color: #ffffff;
 }
 .box.box-solid.box-success {
-  border: 1px solid #00a65a;
+  border: 1px solid #605ca8;
 }
 .box.box-solid.box-success > .box-header {
   color: #ffffff;
-  background: #00a65a;
-  background-color: #00a65a;
+  background: #605ca8;
+  background-color: #605ca8;
 }
 .box.box-solid.box-success > .box-header a,
 .box.box-solid.box-success > .box-header .btn {
@@ -1933,7 +1935,7 @@ a:focus {
   border-left-color: #00c0ef;
 }
 .todo-list .success {
-  border-left-color: #00a65a;
+  border-left-color: #605ca8;
 }
 .todo-list .primary {
   border-left-color: #3c8dbc;
@@ -1965,7 +1967,7 @@ a:focus {
   border-radius: 50%;
 }
 .chat .item > .online {
-  border: 2px solid #00a65a;
+  border: 2px solid #605ca8;
 }
 .chat .item > .offline {
   border: 2px solid #dd4b39;
@@ -2247,7 +2249,7 @@ a:focus {
   background-color: #367fa9;
 }
 .btn-success {
-  background-color: #00a65a;
+  background-color: #605ca8;
   border-color: #008d4c;
 }
 .btn-success:hover,
@@ -2575,7 +2577,7 @@ a:focus {
   border-top-color: #f39c12;
 }
 .nav-tabs-custom.tab-success > .nav-tabs > li.active {
-  border-top-color: #00a65a;
+  border-top-color: #605ca8;
 }
 .nav-tabs-custom.tab-default > .nav-tabs > li.active {
   border-top-color: #d2d6de;
@@ -2906,13 +2908,13 @@ table.text-center th {
   border-left-color: #00c0ef;
 }
 .direct-chat-success .right > .direct-chat-text {
-  background: #00a65a;
-  border-color: #00a65a;
+  background: #605ca8;
+  border-color: #605ca8;
   color: #ffffff;
 }
 .direct-chat-success .right > .direct-chat-text:after,
 .direct-chat-success .right > .direct-chat-text:before {
-  border-left-color: #00a65a;
+  border-left-color: #605ca8;
 }
 /*
  * Component: Users List
@@ -4435,7 +4437,9 @@ table.text-center th {
 .alert-success,
 .label-success,
 .modal-success .modal-body {
-  background-color: #00a65a !important;
+  background-color: #605ca8 !important;
+  /* background-color: #605ca8 !important; */
+
 }
 .bg-navy {
   background-color: #001f3f !important;
@@ -4543,7 +4547,7 @@ table.text-center th {
   color: #3c8dbc !important;
 }
 .text-green {
-  color: #00a65a !important;
+  color: #605ca8 !important;
 }
 .text-gray {
   color: #d2d6de !important;
@@ -4688,12 +4692,12 @@ table.text-center th {
   color: #fff;
 }
 .bg-green-gradient {
-  background: #00a65a !important;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #00a65a), color-stop(1, #00ca6d)) !important;
-  background: -ms-linear-gradient(bottom, #00a65a, #00ca6d) !important;
-  background: -moz-linear-gradient(center bottom, #00a65a 0%, #00ca6d 100%) !important;
-  background: -o-linear-gradient(#00ca6d, #00a65a) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ca6d', endColorstr='#00a65a', GradientType=0) !important;
+  background: #605ca8 !important;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #605ca8), color-stop(1, #00ca6d)) !important;
+  background: -ms-linear-gradient(bottom, #605ca8, #00ca6d) !important;
+  background: -moz-linear-gradient(center bottom, #605ca8 0%, #00ca6d 100%) !important;
+  background: -o-linear-gradient(#00ca6d, #605ca8) !important;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ca6d', endColorstr='#605ca8', GradientType=0) !important;
   color: #fff;
 }
 .bg-red-gradient {
